changed flutter splash page and changed flutter App icon

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  flutter_native_splash: ^2.3.2
+  flutter_launcher_icons: ^0.13.1
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -81,3 +82,16 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: assets/launcer_icon.png
+  adaptive_icon_background: "#ffffff"  # For Android adaptive icon background color
+
+
+flutter_native_splash:
+  color: "#ffffff"  # Background color of the splash screen
+  image:  assets/splash_icon.png # Path to your custom splash screen image
+  android: true
+  ios: true
